styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  *,
  *::after,
  *::before {
    padding: 0;
    margin: 0;
  }

  body {
    min-height: 100vh;
    width: -webkit-fill-available;
  }
}

/* Misc */
.hero {
  position: relative;
  height: 100%;
  width: 100%;
}

.hero::before {
  content: '';
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./../public/img/hero.jpg');
  background-size: cover;
  background-position: center center;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.bakery {
  position: relative;
  height: 400px;
  width: 100vw;
}

.bakery::before {
  content: '';
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./../public/img/baked-goods.jpeg');
  background-size: cover;
  background-position: center center;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  transition: all;
  z-index: -1;
  transition: transform 0.5s ease-in-out;
}
.bakery:hover::before {
  transform: scale(1.1);
}


@keyframes in-out {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

